fix overflow in about page

--- a/web/src/components/skills-experience/skills-experience.module.css
+++ b/web/src/components/skills-experience/skills-experience.module.css
@@ -18,6 +18,7 @@
 }
 
 .rightColumn {
+  overflow: hidden;
   flex: 1;
   display: flex;
   flex-direction: column;
