--- a/web/src/styles/layout.css
+++ b/web/src/styles/layout.css
@@ -52,3 +52,8 @@ button,
 a {
   cursor: pointer;
 }
+
+blockquote {
+  border-left: 0.21875rem solid var(--color-accent);
+  text-indent: 0.9375rem;
+}
